--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,13 +1,5 @@
-:root {
-  --web-studio-black: #212121;
-  --web-studio-blue: #2196f3;
-  --web-studio-white: #ffffff;
-  --web-studio-white2: #f5f4fa;
-  --web-studio-gray: #757575;
-}
-
 body {
-  color: var(--web-studio-black);
+  color: #212121;
   font-family: "Roboto", sans-serif;
   font-size: 14px;
   font-style: normal;
@@ -72,15 +64,15 @@ ol {
   border-bottom: 1px solid #ececec;
 }
 
-.header-logo {
-  color: var(--web-studio-blue);
+.header__logo {
+  color: #2196f3;
   font-family: "Raleway", sans-serif;
   font-size: 26px;
   font-weight: 700;
 }
 
-.header-span {
-  color: var(--web-studio-black);
+.header__span {
+  color: #212121;
 }
 
 .nav-list {
@@ -93,20 +85,20 @@ ol {
   gap: 50px;
 }
 
-.nav-list-item {
+.nav-list__item {
   position: relative;
 }
 
-.nav-list-link {
-  color: var(--web-studio-black);
+.nav-list__link {
+  color: #212121;
   font-weight: 500;
   -webkit-transition: 220ms cubic-bezier(0.6, 0, 0.4, 1);
   transition: 220ms cubic-bezier(0.6, 0, 0.4, 1);
 }
 
-.nav-list-link::after {
+.nav-list__link::after {
   content: "";
-  background-color: var(--web-studio-blue);
+  background-color: #2196f3;
   border-radius: 2px;
   width: 0;
   height: 4px;
@@ -117,12 +109,12 @@ ol {
   transition: width 220ms cubic-bezier(0.6, 0, 0.4, 1);
 }
 
-.nav-list-link:hover::after {
+.nav-list__link:hover::after {
   width: 100%;
 }
 
-.nav-list-link:hover {
-  color: var(--web-studio-blue);
+.nav-list__link:hover {
+  color: #2196f3;
 }
 
 .contact-list {
@@ -132,19 +124,19 @@ ol {
   gap: 50px;
 }
 
-.contact-list-link {
-  color: var(--web-studio-gray);
+.contact-social__link {
+  color: #757575;
   font-weight: 500;
 }
 
-.contact-list-link:hover {
-  color: var(--web-studio-blue);
+.contact-social__link:hover {
+  color: #2196f3;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contacts-email__icon,
-.contacts-tel__icon {
+.contact-email__icon,
+.contact-tel__icon {
   fill: #757575;
   margin-right: 11px;
 }
@@ -322,8 +314,8 @@ ol {
   padding-top: 16px;
 }
 
-.footer-logo {
-  color: var(--web-studio-blue);
+.footer__logo {
+  color: #2196f3;
   font-family: "Raleway", sans-serif;
   font-size: 26px;
   font-weight: 700;
@@ -331,22 +323,22 @@ ol {
   margin-bottom: 20px;
 }
 
-.footer-span {
-  color: var(--web-studio-white);
+.footer__span {
+  color: #2196f3;
 }
 
-.footer-adress {
-  color: var(--web-studio-white);
+.footer__address {
+  color: #2196f3;
   line-height: 1.7;
 }
 
-.footer-mail {
+.footer__mail {
   color: rgba(255, 255, 255, 0.6);
   font-size: 14px;
   line-height: 1.7;
 }
 
-.footer-tel {
+.footer__tel {
   color: rgba(255, 255, 255, 0.6);
   font-size: 14px;
   line-height: 1.7;
@@ -425,14 +417,14 @@ ol {
   border-radius: 4px;
   -webkit-box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
           box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  background-color: var(--web-studio-blue);
+  background-color: #2196f3;
   width: 200px;
   height: 50px;
   border: none;
   font-size: 16px;
   line-height: 1.87;
   text-align: center;
-  color: var(--web-studio-white);
+  color: #fff;
 }
 
 .footer-form__icon {
