--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,5 @@
-:root {
-  --web-studio-black: #212121;
-  --web-studio-blue: #2196f3;
-  --web-studio-white: #ffffff;
-  --web-studio-white2: #f5f4fa;
-  --web-studio-gray: #757575;
-}
-
 body {
-  color: var(--web-studio-black);
+  color: #212121;
   font-family: "Roboto", sans-serif;
   font-size: 14px;
   font-style: normal;
@@ -72,15 +64,15 @@ ol {
   border-bottom: 1px solid #ececec;
 }
 
-.header-logo {
-  color: var(--web-studio-blue);
+.header__logo {
+  color: #2196f3;
   font-family: "Raleway", sans-serif;
   font-size: 26px;
   font-weight: 700;
 }
 
-.header-span {
-  color: var(--web-studio-black);
+.header__span {
+  color: #212121;
 }
 
 .nav-list {
@@ -93,20 +85,20 @@ ol {
   gap: 50px;
 }
 
-.nav-list-item {
+.nav-list__item {
   position: relative;
 }
 
-.nav-list-link {
-  color: var(--web-studio-black);
+.nav-list__link {
+  color: #212121;
   font-weight: 500;
   -webkit-transition: 220ms cubic-bezier(0.6, 0, 0.4, 1);
   transition: 220ms cubic-bezier(0.6, 0, 0.4, 1);
 }
 
-.nav-list-link::after {
+.nav-list__link::after {
   content: "";
-  background-color: var(--web-studio-blue);
+  background-color: #2196f3;
   border-radius: 2px;
   width: 0;
   height: 4px;
@@ -117,12 +109,12 @@ ol {
   transition: width 220ms cubic-bezier(0.6, 0, 0.4, 1);
 }
 
-.nav-list-link:hover::after {
+.nav-list__link:hover::after {
   width: 100%;
 }
 
-.nav-list-link:hover {
-  color: var(--web-studio-blue);
+.nav-list__link:hover {
+  color: #2196f3;
 }
 
 .contact-list {
@@ -132,19 +124,19 @@ ol {
   gap: 50px;
 }
 
-.contact-list-link {
-  color: var(--web-studio-gray);
+.contact-social__link {
+  color: #757575;
   font-weight: 500;
 }
 
-.contact-list-link:hover {
-  color: var(--web-studio-blue);
+.contact-social__link:hover {
+  color: #2196f3;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contacts-email__icon,
-.contacts-tel__icon {
+.contact-email__icon,
+.contact-tel__icon {
   fill: #757575;
   margin-right: 11px;
 }
@@ -166,8 +158,8 @@ ol {
   background-position: center;
 }
 
-.hero-title {
-  color: var(--web-studio-white);
+.hero__title {
+  color: #fff;
   text-align: center;
   font-size: 44px;
   font-weight: 900;
@@ -177,13 +169,13 @@ ol {
 }
 
 .button {
-  color: var(--web-studio-white);
+  color: #fff;
   font-size: 16px;
   font-weight: 700;
   line-height: 1.9;
   width: 216px;
   height: 50px;
-  background-color: var(--web-studio-blue);
+  background-color: #2196f3;
   border: none;
   border-radius: 4px;
   margin: 0 auto;
@@ -256,7 +248,7 @@ ol {
   padding: 40px;
   -webkit-box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
           box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
-  background-color: var(--web-studio-white);
+  background-color: #fff;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -305,7 +297,7 @@ ol {
 }
 
 .modal__input {
-  outline: var(--web-studio-blue);
+  outline: #2196f3;
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -322,8 +314,8 @@ ol {
 
 .modal__input:hover,
 .modal__input:hover + .modal__icon {
-  border-color: var(--web-studio-blue);
-  fill: var(--web-studio-blue);
+  border-color: #2196f3;
+  fill: #2196f3;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -341,8 +333,8 @@ ol {
 
 .modal__com:hover,
 .modal__com:focus {
-  border-color: var(--web-studio-blue);
-  outline-color: var(--web-studio-blue);
+  border-color: #2196f3;
+  outline-color: #2196f3;
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -391,10 +383,10 @@ ol {
   position: absolute;
   width: 100%;
   height: 100%;
-  color: var(--web-studio-white);
+  color: #fff;
   border-radius: 2px;
-  outline: 3px solid var(--web-studio-blue);
-  background-color: var(--web-studio-blue);
+  outline: 3px solid #2196f3;
+  background-color: #2196f3;
   background-image: url(../images/modal/check.svg);
   background-position: center;
   background-repeat: no-repeat;
@@ -402,7 +394,7 @@ ol {
 
 .modal__link {
   text-decoration: underline;
-  color: var(--web-studio-blue);
+  color: #2196f3;
 }
 
 .modal-btn__close {
@@ -412,7 +404,7 @@ ol {
   padding: 8px 11px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 100%;
-  background-color: var(--web-studio-white);
+  background-color: #fff;
 }
 
 .modal-icon__close {
@@ -421,7 +413,7 @@ ol {
 }
 
 .modal-icon__close:hover {
-  fill: var(--web-studio-blue);
+  fill: #2196f3;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -438,7 +430,7 @@ ol {
   gap: 30px;
 }
 
-.features-list-item::before {
+.features-list__item::before {
   content: "";
   display: block;
   height: 120px;
@@ -450,35 +442,35 @@ ol {
   margin-bottom: 30px;
 }
 
-.features-list-item:first-child::before {
+.features-list__item:first-child::before {
   background-image: url("../images/features/antenna.svg");
 }
 
-.features-list-item:nth-child(2)::before {
+.features-list__item:nth-child(2)::before {
   background-image: url("../images/features/clock.svg");
 }
 
-.features-list-item:nth-child(3)::before {
+.features-list__item:nth-child(3)::before {
   background-image: url("../images/features/diagram.svg");
 }
 
-.features-list-item:last-child::before {
+.features-list__item:last-child::before {
   background-image: url("../images/features/astronaut.svg");
 }
 
-.features-list-item {
+.features-list__item {
   max-width: 270px;
 }
 
-.features-title {
-  color: var(--web-studio-black);
+.features__title {
+  color: #212121;
   font-weight: 700;
   text-transform: uppercase;
   margin-bottom: 10px;
 }
 
-.features-text {
-  color: var(--web-studio-gray);
+.features__text {
+  color: #757575;
   line-height: 1.7;
 }
 
@@ -486,19 +478,19 @@ ol {
   padding-bottom: 94px;
 }
 
-.work-title {
-  color: var(--web-studio-black);
+.work__title {
+  color: #212121;
   text-align: center;
   font-size: 36px;
   font-weight: 700;
   margin-bottom: 50px;
 }
 
-.work-list-item {
+.work-list__item {
   position: relative;
 }
 
-.work-img {
+.work__img {
   width: 370px;
   height: 294px;
 }
@@ -525,24 +517,24 @@ ol {
 }
 
 .team {
-  background: var(--web-studio-white2);
+  background: #f5f4fa;
   padding-bottom: 94px;
   padding-top: 94px;
 }
 
-.team-title {
-  color: var(--web-studio-black);
+.team__title {
+  color: #212121;
   text-align: center;
   font-size: 36px;
   font-weight: 700;
   margin-bottom: 50px;
 }
 
-.team-list-item {
+.team-list__item {
   padding-bottom: 30px;
 }
 
-.team-info {
+.team__info {
   width: 270px;
   height: 428px;
   border-radius: 0px 0px 4px 4px;
@@ -551,20 +543,20 @@ ol {
           box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
 
-.team-img {
+.team__img {
   width: 270px;
   height: 260px;
 }
 
-.team-name {
-  color: var(--web-studio-black);
+.team__name {
+  color: #212121;
   text-align: center;
   font-weight: 500;
   margin: 30px 0 10px;
 }
 
-.team-prof {
-  color: var(--web-studio-gray);
+.team__prof {
+  color: #757575;
   text-align: center;
 }
 
@@ -698,8 +690,8 @@ ol {
   padding-top: 16px;
 }
 
-.footer-logo {
-  color: var(--web-studio-blue);
+.footer__logo {
+  color: #2196f3;
   font-family: "Raleway", sans-serif;
   font-size: 26px;
   font-weight: 700;
@@ -707,22 +699,22 @@ ol {
   margin-bottom: 20px;
 }
 
-.footer-span {
-  color: var(--web-studio-white);
+.footer__span {
+  color: #2196f3;
 }
 
-.footer-adress {
-  color: var(--web-studio-white);
+.footer__address {
+  color: #2196f3;
   line-height: 1.7;
 }
 
-.footer-mail {
+.footer__mail {
   color: rgba(255, 255, 255, 0.6);
   font-size: 14px;
   line-height: 1.7;
 }
 
-.footer-tel {
+.footer__tel {
   color: rgba(255, 255, 255, 0.6);
   font-size: 14px;
   line-height: 1.7;
@@ -801,14 +793,14 @@ ol {
   border-radius: 4px;
   -webkit-box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
           box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  background-color: var(--web-studio-blue);
+  background-color: #2196f3;
   width: 200px;
   height: 50px;
   border: none;
   font-size: 16px;
   line-height: 1.87;
   text-align: center;
-  color: var(--web-studio-white);
+  color: #fff;
 }
 
 .footer-form__icon {
