--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,5 +1,5 @@
 body {
-  color: var(--web-studio-black);
+  color: getColor("black");
   font-family: "Roboto", sans-serif;
   font-size: 14px;
   font-style: normal;
