--- a/sass/components/_brands.scss
+++ b/sass/components/_brands.scss
@@ -6,7 +6,7 @@
   font-size: 36px;
   letter-spacing: 0.03em;
   text-align: center;
-  color: #212121;
+  color: getColor("black");
   margin-bottom: 59px;
 }
 .brands__list {
@@ -22,12 +22,12 @@
   padding: 17px 30px;
 }
 .brands-list__item:hover {
-  border-color: #2196f3;
+  border-color: getColor("hover");
   cursor: pointer;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .brands-list__item:hover svg {
-  fill: #2196f3;
+  fill: getColor("hover");
   cursor: pointer;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
