--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -6,39 +6,39 @@
   display: flex;
   gap: 30px;
 }
-.features-list-item::before {
+.features-list__item::before {
   content: "";
   display: block;
   height: 120px;
-  background-color: #f5f4fa;
+  background-color: getColor("light");
   background-repeat: no-repeat;
   background-position: center;
   border-radius: 4px;
   margin-top: 30px;
   margin-bottom: 30px;
 }
-.features-list-item:first-child::before {
+.features-list__item:first-child::before {
   background-image: url("../images/features/antenna.svg");
 }
-.features-list-item:nth-child(2)::before {
+.features-list__item:nth-child(2)::before {
   background-image: url("../images/features/clock.svg");
 }
-.features-list-item:nth-child(3)::before {
+.features-list__item:nth-child(3)::before {
   background-image: url("../images/features/diagram.svg");
 }
-.features-list-item:last-child::before {
+.features-list__item:last-child::before {
   background-image: url("../images/features/astronaut.svg");
 }
-.features-list-item {
+.features-list__item {
   max-width: 270px;
 }
-.features-title {
-  color: var(--web-studio-black);
+.features__title {
+  color: getColor("black");
   font-weight: 700;
   text-transform: uppercase;
   margin-bottom: 10px;
 }
-.features-text {
-  color: var(--web-studio-gray);
+.features__text {
+  color: getColor("gray");
   line-height: 1.7;
 }
