--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -7,14 +7,14 @@
   padding: 24px 0 25px;
   border-bottom: 1px solid #ececec;
 }
-.header-logo {
-  color: var(--web-studio-blue);
+.header__logo {
+  color: getColor("hover");
   font-family: "Raleway", sans-serif;
   font-size: 26px;
   font-weight: 700;
 }
-.header-span {
-  color: var(--web-studio-black);
+.header__span {
+  color: getColor("black");
 }
 .nav-list {
   display: flex;
@@ -22,19 +22,19 @@
   gap: 50px;
 }
 
-.nav-list-item {
+.nav-list__item {
   position: relative;
 }
 
-.nav-list-link {
-  color: var(--web-studio-black);
+.nav-list__link {
+  color: getColor("black");
   font-weight: 500;
   transition: 220ms cubic-bezier(0.6, 0, 0.4, 1);
 }
 
-.nav-list-link::after {
+.nav-list__link::after {
   content: "";
-  background-color: var(--web-studio-blue);
+  background-color: getColor("hover");
   border-radius: 2px;
   width: 0;
   height: 4px;
@@ -43,33 +43,33 @@
   left: 0;
   transition: width 220ms cubic-bezier(0.6, 0, 0.4, 1);
 }
-.nav-list-link:hover::after {
+.nav-list__link:hover::after {
   width: 100%;
 }
 
-.nav-list-link:hover {
-  color: var(--web-studio-blue);
+.nav-list__link:hover {
+  color: getColor("hover");
 }
 .contact-list {
   display: flex;
   gap: 50px;
 }
-.contact-list-link {
-  color: var(--web-studio-gray);
+.contact-social__link {
+  color: getColor("gray");
   font-weight: 500;
 }
-.contact-list-link:hover {
-  color: var(--web-studio-blue);
+.contact-social__link:hover {
+  color: getColor("hover");
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contacts-email__icon,
-.contacts-tel__icon {
-  fill: #757575;
+.contact-email__icon,
+.contact-tel__icon {
+  fill: getColor("gray");
   margin-right: 11px;
 }
 .contact-email:hover svg,
 .contact-tel:hover svg {
-  fill: #2196f3;
+  fill: getColor("hover");
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
