--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -11,8 +11,8 @@
   background-size: cover;
   background-position: center;
 }
-.hero-title {
-  color: var(--web-studio-white);
+.hero__title {
+  color: getColor("white");
   text-align: center;
   font-size: 44px;
   font-weight: 900;
@@ -21,14 +21,14 @@
   margin-bottom: 30px;
 }
 .button {
-  color: var(--web-studio-white);
+  color: getColor("white");
   font-size: 16px;
   font-weight: 700;
   line-height: 1.9;
 
   width: 216px;
   height: 50px;
-  background-color: var(--web-studio-blue);
+  background-color: getColor("hover");
   border: none;
   border-radius: 4px;
   margin: 0 auto;
