--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,19 +1,19 @@
 .team {
-  background: var(--web-studio-white2);
+  background: getColor("light");
   padding-bottom: 94px;
   padding-top: 94px;
 }
-.team-title {
-  color: var(--web-studio-black);
+.team__title {
+  color: getColor("black");
   text-align: center;
   font-size: 36px;
   font-weight: 700;
   margin-bottom: 50px;
 }
-.team-list-item {
+.team-list__item {
   padding-bottom: 30px;
 }
-.team-info {
+.team__info {
   width: 270px;
   height: 428px;
   border-radius: 0px 0px 4px 4px;
@@ -21,18 +21,18 @@
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
-.team-img {
+.team__img {
   width: 270px;
   height: 260px;
 }
-.team-name {
-  color: var(--web-studio-black);
+.team__name {
+  color: getColor("black");
   text-align: center;
   font-weight: 500;
   margin: 30px 0 10px;
 }
-.team-prof {
-  color: var(--web-studio-gray);
+.team__prof {
+  color: getColor("gray");
   text-align: center;
 }
 .team-list {
@@ -53,11 +53,11 @@
   cursor: pointer;
 }
 .team-social__item:hover {
-  background-color: #2196f3;
+  background-color: getColor("hover");
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-social__item:hover svg {
-  fill: #fff;
+  fill: getColor("white");
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-social__icon {
@@ -66,6 +66,6 @@
   height: 20px;
 }
 .team-social__icon:hover {
-  fill: #fff;
+  fill: getColor("white");
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
