--- a/sass/components/_work.scss
+++ b/sass/components/_work.scss
@@ -1,19 +1,19 @@
 .work {
   padding-bottom: 94px;
 }
-.work-title {
-  color: var(--web-studio-black);
+.work__title {
+  color: getColor("black");
   text-align: center;
   font-size: 36px;
   font-weight: 700;
   margin-bottom: 50px;
 }
 
-.work-list-item {
+.work-list__item {
   position: relative;
 }
 
-.work-img {
+.work__img {
   width: 370px;
   height: 294px;
 }
@@ -24,7 +24,7 @@
   font-size: 14px;
   text-transform: uppercase;
   text-align: center;
-  color: #fff;
+  color: getColor("white");
   background-color: rgba(47, 48, 58, 0.8);
   padding: 27px;
   letter-spacing: 0.03em;
