--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,7 +1,11 @@
-:root {
-  --web-studio-black: #212121;
-  --web-studio-blue: #2196f3;
-  --web-studio-white: #ffffff;
-  --web-studio-white2: #f5f4fa;
-  --web-studio-gray: #757575;
+
+$colors: (
+  "hover": #2196f3,
+  "black": #212121,
+  "white": #fff,
+  "light": #f5f4fa,
+  "gray": #757575
+);
+@function getColor($key) {
+  @return map-get($colors, $key);
 }
